# Prompt-Manager

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
examples/: quickstart.prompts.txt
include/: input_utils.h
src/: input_utils.c  main.c  style.c  ui_frame.c
work/: CMakeLists.txt  README.md  SECURITY.md  prompts.db
work/docs/: ROADMAP.md
work/include/: cli.h  llm_client.h  prompt_store.h  style.h  ui_frame.h  ui_icons.h
work/src/: cli.c  llm_client.c  prompt_store.c  prompts.db  ui_icons.c
work/tests/: test_prompt_store.c
